test/pass/lambdas/lambda_single_quote.lily
var v = (|| ['a', 'b', 'c'])

if v() != ['a', 'b', 'c']:
    stderr.print("Failed.")
